# embench-iot-rs

./: Cargo.toml  README.md  run_all.sh
result/: aha-mont64  aha-mont64-noinline  analyze.R  c.txt  cubic  embench-iot-rs  embench-iot-rs-noinline  matmult-int  nbody  profile_memo.md  result.eps  result.txt  rs.txt  talk.md
src/: main.rs
src/aha-mont64/: mont64.rs
src/aha_mont64/: mod.rs
src/common/: mod.rs
src/crc32/: crc32.rs  mod.rs
src/cubic/: libcubic.rs  mod.rs
src/edn/: libedn.rs
src/matmult_int/: mod.rs
src/minver/: mod.rs
src/nbody/: mod.rs  nbody.rs
src/nettle_aes/: mod.rs
src/st/: mod.rs
src/support/: beebs.rs
